working on display and interval

--- a/.env
+++ b/.env
@@ -11,3 +11,7 @@ REACT_APP_MEASUREMENT_ID = "G-B2280DSQX4"
 # rapid api host and key
 REACT_APP_RAPID_HOST='genius.p.rapidapi.com'
 REACT_APP_RAPID_KEY='fdef344259mshfc60df02b00de5ap1d4a12jsn412bec94650e'
+
+#interval for checking
+
+REACT_APP_INTERVAL = 10000 #10 seconds
