--- a/.env
+++ b/.env
@@ -13,5 +13,5 @@ REACT_APP_RAPID_HOST='genius.p.rapidapi.com'
 REACT_APP_RAPID_KEY='fdef344259mshfc60df02b00de5ap1d4a12jsn412bec94650e'
 
 #interval for checking
-
-REACT_APP_INTERVAL = 10000 #10 seconds
+#10 seconds
+REACT_APP_INTERVAL = 10000
