--- a/.env__
+++ b/.env__
@@ -14,4 +14,5 @@ REACT_APP_RAPID_KEY= #rapid_api_host
 
 #interval for checking
 
-REACT_APP_INTERVAL = 10000 #10 seconds
+#10 seconds
+REACT_APP_INTERVAL = 10000 
